Buzilla #40676: Fix newly introduced findbugs warnings. Submitted by Luis Bernardo.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@1350790 13f79535-47bb-0310-9956-ffa450edef68